# JOB-CANNON

./: .env.example  .gitignore  ARCHITECTURE.md  DEPLOY.md  Dockerfile  ERROR_LOGGER.md  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
deploy/huggingface/: README.md
docs/: IMPROVEMENTS.md  OPENAI_SDK_MAPPING.md
examples/: sample_cv.txt  sample_profile.json
frontend/: .env.example  README.md  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/dashboard/: page.tsx
frontend/components/: AgentFlow.tsx  AgentsShowcase.tsx  ApplicationsTable.tsx  AuthModal.tsx  Background.tsx  CvDropzone.tsx  ErrorLogger.tsx  Footer.tsx  Hero.tsx  HowItWorks.tsx  JobResultCard.tsx  MatchRing.tsx  Navbar.tsx  PipelineRunner.tsx  Scene3D.tsx
frontend/lib/: api.ts  auth.tsx  logger.ts  types.ts
src/career_assistant/: __init__.py  cli.py  config.py  logging_config.py  pipeline.py
src/career_assistant/agents/: __init__.py  application_agent.py  base.py  cover_letter_agent.py  matching_agent.py  orchestrator.py  resume_agent.py  scraping_agent.py  skill_interview_agent.py  tracking_agent.py  verification_agent.py
src/career_assistant/agents_sdk/: __init__.py  adapter.py
src/career_assistant/api/: __init__.py  app.py
src/career_assistant/auth/: __init__.py  dependencies.py  security.py
src/career_assistant/guardrails/: __init__.py  base.py  (+5 more)
tests/: conftest.py  test_guardrails.py  test_llm_client.py  test_match_score.py  test_pii.py  test_pipeline_smoke.py  test_rate_limiter.py
(+21 files in other folders)
