[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-career-assistant"
version = "0.1.0"
description = "Multi-agent AI career assistant: discovery, matching, customization, application, interview prep."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "pydantic>=2.5",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
api = ["fastapi>=0.110", "uvicorn[standard]>=0.27"]
scrape = ["python-jobspy>=1.1.76"]
llm = ["openai>=1.30"]
cv = ["python-docx>=1.1", "pypdf>=4.0"]
dev = ["pytest>=8.0"]
all = [
    "fastapi>=0.110", "uvicorn[standard]>=0.27", "python-jobspy>=1.1.76",
    "openai>=1.30", "python-docx>=1.1", "pypdf>=4.0", "pytest>=8.0",
]

[project.scripts]
career-assistant = "career_assistant.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
